--- a/photo-faves/index.html
+++ b/photo-faves/index.html
@@ -674,7 +674,7 @@ Total images: <strong id='total-images'>0</strong>
     
   
     
-    <div id="cover" style="background-image:url('http://nianze.ml/images/cover-v1.2.0.jpg');"></div>
+    <div id="cover" style="background-image:url('https://farm5.staticflickr.com/4598/38533578054_055eff3b64_o.jpg');"></div>
   
 
 
