--- a/photo-faves/index.html
+++ b/photo-faves/index.html
@@ -340,6 +340,10 @@ A gallery for some of my photos stored in <a href="https://www.flickr.com/photos
 Total images: <strong id='total-images'>0</strong>
 </p>
 <div id='photo-gallery'></div>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/jquery.fancybox.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-thumbs.min.js"></script>
 <script src="http://nianze.tk/js/photo-gallery/flickrfeed.js"></script></p>
 
               
