Publishing to gh-pages (publish.sh)

--- a/about/index.html
+++ b/about/index.html
@@ -389,7 +389,7 @@ Suffering is optional.</p>
     <a href='https://drive.google.com/open?id=1W9VTQuNzg3rrCC91RMHi6NxMopeg8poE'>Download Resume</a>
 </h4>
 
-<h2 id="work-experience">Work Experience</h2>
+<h1 id="work-experience">Work Experience</h1>
 
 <div class='display-card experience-card'>
     <h3 class='company'>Bloomberg L.P. <small class='dates'>May 2017 - Today</small></h3>
@@ -409,7 +409,7 @@ Suffering is optional.</p>
     </h6>
 </div>
 
-<h2 id="skills">Skills</h2>
+<h1 id="skills">Skills</h1>
 
 <div class='display-card skills'>
     <h3 class='skill-category'>Programming</h3>
@@ -433,16 +433,16 @@ Suffering is optional.</p>
     <span class='tooltip--top' data-tooltip="Tool I used to built this website">Hugo Static Site Generator</span>
 </div>
 
-<h2 id="education">Education</h2>
+<h1 id="education">Education</h1>
 
 <p><strong>New York University</strong>
-| Master of Music - Music Technology</p>
+| Master of Music - <em>Music Technology</em></p>
 
 <p><strong>Cornell University</strong>
-| Master of Engineer - Electrical and Computer Engineering</p>
+| Master of Engineering - <em>Electrical and Computer Engineering</em></p>
 
 <p><strong>Southeast University</strong>
-| Bachelor of Engineer - Electronic Science &amp; Technology</p>
+| Bachelor of Engineering - <em>Electronic Science &amp; Technology</em></p>
 
 <p>Computer always fascinates me. I chose Electronic Science &amp; Technology as my undergrad major largely because I want to better understand the basic of computer hardware.</p>
 
@@ -486,9 +486,9 @@ Suffering is optional.</p>
 <li>Intro to Computer Music</li>
 </ul>
 
-<h2 id="hobbies">Hobbies</h2>
+<h1 id="hobbies">Hobbies</h1>
 
-<h3 id="music">Music</h3>
+<h2 id="music">Music</h2>
 
 <p>I started learning the clarinet since my elementary school and joint school concert band since junior high. Music has become a pleasing way of self-expression. After covering some of my favorite songs in clarinet during the summer of 2015, I determined to make it one step further: why not to write my own music? So I started to practice with piano, guitar and launchpad, only in hope of making my own sound. Everytime I feel tired of practicing, listening to songs from Ed Sheeran, 米津玄師 and 40㍍P will always vitalize myself again.</p>
 
@@ -499,7 +499,7 @@ Suffering is optional.</p>
 <li><a href="https://space.bilibili.com/2844586/">Bilibili</a></li>
 </ul>
 
-<h3 id="photography">Photography</h3>
+<h2 id="photography">Photography</h2>
 
 <p>I&rsquo;ve received my first DSLR (Pentax K5) as a gift at the summer vacation of my fresh year, and have fallen in love with photography since then. I like street photography as well as landscape, only taking portraits occasionally. Check out my photos:</p>
 
