Publishing to gh-pages (publish.sh)

--- a/about/index.html
+++ b/about/index.html
@@ -41,8 +41,8 @@
 
 
 
-  <meta property="og:image" content="http://nianze.tk/images/IMG_4645.JPG">
-  <meta property="twitter:image" content="http://nianze.tk/images/IMG_4645.JPG">
+  <meta property="og:image" content="http://nianze.tk/images/selfie.jpg">
+  <meta property="twitter:image" content="http://nianze.tk/images/selfie.jpg">
 
 
 
@@ -336,7 +336,7 @@ Suffering is optional.</p>
   <div class="post-header-cover
               text-left
               "
-       style="background-image:url('/images/IMG_4645.JPG')"
+       style="background-image:url('/images/selfie.jpg')"
        data-behavior="1">
     
       <div class="post-header main-content-wrap text-left">
