--- a/zh/about/index.html
+++ b/zh/about/index.html
@@ -1747,11 +1747,11 @@ Virtualizing static fields in 3rd-party Java library during runtime to improve m
 <ul>
 <li>iPhone X (mostly used one)</li>
 <li>Leica SL</li>
-<li>Leica M4</li>
 <li>Hexar RF</li>
-<li>Leica Summicron-M 35mm f/2 ASPH</li>
-<li>ZEISS C Sonnar T* 50mm f/1.5 ZM</li>
 <li>ZEISS Biogon T* 21mm f/2.8 ZM</li>
+<li>ZEISS Distagon T* 35mm f/1.4 ZM</li>
+<li>Voigtländer Nokton 50 mm F1.2 Aspherical VM</li>
+<li>LEICA APO-SUMMICRON-M 75 f/2 ASPH.</li>
 <li>LightPix Labs FlashQ Q20II</li>
 <li>Nikon COOLSCAN IV ED (LS-40 ED)</li>
 </ul>
