Publishing to gh-pages (publish.sh)

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -1745,7 +1745,7 @@ Virtualizing static fields in 3rd-party Java library during runtime to improve m
 <h3 id="photography">Photography</h3>
 <p>My current gears:</p>
 <ul>
-<li>iPhone X (mostly used one)</li>
+<li>iPhone SE 2</li>
 <li>Leica SL</li>
 <li>Hexar RF</li>
 <li>ZEISS Biogon T* 21mm f/2.8 ZM</li>
@@ -1759,7 +1759,7 @@ Virtualizing static fields in 3rd-party Java library during runtime to improve m
 <ul>
 <li><a href="https://www.flickr.com/photos/129774362@N07/">Flickr</a></li>
 <li><a href="https://www.instagram.com/eznain/">Instagram</a></li>
-<li><a href="http://nianze.tk/en/gallery/">Weekly Visual Project</a></li>
+<li><a href="/en/gallery/">Weekly Visual Project</a></li>
 </ul>
 </div>
 
