Publishing to gh-pages (publish.sh)

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -1751,15 +1751,39 @@ Virtualizing static fields in 3rd-party Java library during runtime to improve m
 <h3 id="photography">Photography</h3>
 <p>My current gears:</p>
 <ul>
+<li>Cameras:
+<ul>
 <li>iPhone SE 2</li>
 <li>Leica SL</li>
-<li>Hexar RF</li>
-<li>ZEISS Biogon T* 21mm f/2.8 ZM</li>
+<li>Konica Hexar RF</li>
+<li>Nikon FE2</li>
+</ul>
+</li>
+<li>Lenses
+<ul>
+<li>For Leica M-mount:
+<ul>
 <li>ZEISS Distagon T* 35mm f/1.4 ZM</li>
 <li>Voigtländer Nokton 50mm f/1.2 Aspherical VM</li>
 <li>LEICA APO-SUMMICRON-M 75 f/2 ASPH.</li>
+</ul>
+</li>
+<li>For Nikon F-mount (with DKL-to-Nikon adapter):
+<ul>
+<li>Schneider-Kreuznach Retina-Curtagon 28mm f/4 DKL</li>
+<li>Leica Summicron-R 50mm f/2 (modified to Nikon F-mount)</li>
+<li>Voigtländer Septon 50mm f/2 DKL</li>
+<li>Voigtlander Super Dynarex 135mm f/4 DKL</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>Others:
+<ul>
 <li>LightPix Labs FlashQ Q20II</li>
 <li>Nikon COOLSCAN IV ED (LS-40 ED)</li>
+</ul>
+</li>
 </ul>
 <p>Some of my photos:</p>
 <ul>
