Publishing to gh-pages (publish.sh)

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -1687,9 +1687,8 @@
 <ul>
 <li>Digital cameras:
 <ul>
-<li>Leica M9</li>
-<li>Leica Q2</li>
-<li>Leica SL</li>
+<li>Leica M9-P (silver)</li>
+<li>Leica CL (silver)</li>
 </ul>
 </li>
 <li>Film cameras:
