Publishing to gh-pages (publish.sh)

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -1689,12 +1689,12 @@
 <ul>
 <li>Leica M9-P (silver)</li>
 <li>Leica CL (silver)</li>
+<li>Pentax K-1 Mark II</li>
 </ul>
 </li>
 <li>Film cameras:
 <ul>
 <li>Leica M3 (made in 1959/6)</li>
-<li>Konica Hexar RF</li>
 <li>Pentax ZX-5N (aka MZ-5N)</li>
 <li>Pentax LX</li>
 <li>Rolleiflex 3.5F type 3 with Zeiss Planar lens (6 elements, made in 1961)</li>
@@ -1707,6 +1707,11 @@
 <ul>
 <li>Schneider-Kreuznach Componon-S 50mm f/2.8</li>
 <li>Schneider-Kreuznach Componon-S 80mm f/4</li>
+</ul>
+</li>
+<li>Leica L-mount:
+<ul>
+<li>Leica Vario-Elmar-T 18-56mm f/3.5-5.6 ASPH</li>
 </ul>
 </li>
 <li>Leica M-mount:
